--- a/main.html
+++ b/main.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Acciojobs Blog</title>
+  <style>
+    .image-link {
+      display: inline-block;
+      height: 200px;
+    }
+    .marquee {
+      white-space: nowrap;
+      overflow: hidden;
+      animation: marquee 10s linear infinite;
+    }
+    @keyframes marquee {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h1 class="marquee">Welcome to Acciojobs!</h1>
 
+  <div>
+    <a href="https://acciojob.com/blog/">
+      <img class="image-link" src="Image_one.jpg" alt="Image One">
+    </a>
+    <a href="https://acciojob.com/blog/brute-force-vs-optimization/">
+      <h2>
+        Brute Force vs. Optimization
+      </h2>
+    </a>
+    <a href="https://acciojob.com/blog/brute-force-vs-optimization/">
+      <p>
+        We can say that optimization is one step further than the brute-force method of problem solving…
+      </p>
+    </a>
+  </div>
+
+  <div>
+    <a href="https://acciojob.com/blog/">
+      <img class="image-link" src="Image_two.jpg" alt="Image Two">
+    </a>
+    <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">
+      <h2>
+        DSA vs. Competitive Programming
+      </h2>
+    </a>
+    <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">
+      <p>
+        DSA or Competitive programming? What is better for you? Questions such as these often put you in a…
+      </p>
+    </a>
+  </div>
+
+  <div>
+    <a href="https://acciojob.com/blog/">
+      <img class="image-link" src="Image_three.jpg" alt="Image Three">
+    </a>
+    <a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">
+      <h2>
+        10 Tips to Optimize Your LinkedIn Profile and Attract Recruiters
+      </h2>
+    </a>
+    <a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">
+      <p>
+        As a job seeker, you may wonder how to make your LinkedIn profile stand out to recruiters. Your LinkedIn…
+      </p>
+    </a>
+  </div>
 </body>
-
 </html>
