--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1 class="marquee">Welcome to Acciojobs!</h1>
+  <marquee>Welcome to Acciojobs!</marquee>
 
   <div>
     <a href="https://acciojob.com/blog/">
